@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 mod_id=sanitydim
 spec_version=1
-mod_version=1.0.0
+mod_version=1.0.1
 developer=croissantnova
 archives_base_name=sanitydim
 
