@@ -1,2 +1,5 @@
-mc1.18.2-forge40.2.0-1.0.0:
+mc1.18-forge40.2.0-1.0.1:
+- Fixed config comments
+
+mc1.18-forge40.2.0-1.0.0:
 - Initial release
